# testovoe_zadanie

./: .env.example  .gitignore  PLAN.md  README.md  SPEC.md  plan.md  pyproject.toml
ai_browser_agent/: .env.example  .gitignore  README.md  __init__.py  agent_core.py  browser_controller.py  cli.py  config.py  context_manager.py  error_handler.py  kimi_client.py  main.py  models.py  prompts.py  requirements.txt  security.py  sub_agents.py  utils.py
ai_browser_agent/agent/: cascade.py  context.py  core.py  models.py  prompts.py  subagents.py  tools.py
ai_browser_agent/browser/: __init__.py  actions.py  controller.py  resolver.py  snapshot.py
ai_browser_agent/evals/: __init__.py  run_eval.py  tasks.yaml
ai_browser_agent/llm/: anthropic_client.py  base.py  openai_client.py  openai_compatible_client.py  rate_limiter.py
ai_browser_agent/observability/: __init__.py  artifacts.py  logger.py
ai_browser_agent/recovery/: __init__.py  errors.py  handler.py
ai_browser_agent/safety/: __init__.py  classifier.py  policy.py
ai_browser_agent/tests/: test_context_manager.py  test_error_handler.py  test_main_config.py
references/craft/: assignment.json  assignment_outline.md
runs/20260428-073545-open-http-127-0-0-1-8765-delivery-add-the-bbq-bu/: events.jsonl  state.json
runs/20260428-074254-open-http-127-0-0-1-8765-delivery-add-the-bbq-bu/: events.jsonl  state.json  summary.md
runs/20260428-080246-open-http-127-0-0-1-8765-delivery-add-the-bbq-bu/: events.jsonl  state.json  summary.md
runs/20260428-112407-hh-ru-5/: events.jsonl  (+1 more)
scripts/: check_no_hardcoded_flows.py
(+100 files in other folders)
